изменено получение ресурсов и деревьев